# ProjectPlant

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  TESTPLAN.md  input.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sample-raw.json  sandbox_write_check.txt  sensors.c  tmp.txt  tmp_print.js  tsconfig.base.json  vite.config.ts
apps/hub/: .env  README.md  pyproject.toml  requirements.txt
apps/hub/data/: pot_telemetry.sqlite  pot_telemetry.sqlite-shm  pot_telemetry.sqlite-wal
apps/hub/src/: config.py  main.py
apps/hub/src/api/: etkc_router.py  search_router.py
apps/hub/src/auth/: __init__.py  apple.py  google.py  jwt.py
apps/hub/src/etkc/: __init__.py  coeffs.py  controller.py  db.py  learner.py  observe.py  reference.py  sim.py  state.py  worker.py
apps/hub/src/mock/: data.py
apps/hub/src/mqtt/: bridge.py  client.py
apps/hub/src/projectplant_hub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/hub/src/services/: alerts.py  care_engine.py  commands.py  device_registry.py  evapotranspiration.py  event_bus.py  fetch_hrrr.py  jobs.py  managed_auth.py  plant_lookup.py  (+11 more)
apps/hub/tests/: conftest.py  test_api.py  test_commands.py  test_config.py  test_events.py  test_health.py  test_irrigation.py  test_mock.py  test_mqtt.py  test_mqtt_bridge.py  test_plant_control.py  test_plant_schedule.py  test_plants.py  test_provisioning.py  test_telemetry.py  test_users.py  test_weather.py  test_weather_hrrr.py
firmware/esp32_pot/main/: CMakeLists.txt  ads1115.c  ads1115.h  aht10.c  aht10.h  app_main.c  device_identity.c  device_identity.h  hardware_config.c  hardware_config.h  node_schedule.c  node_schedule.h  plant_mqtt.c  plant_mqtt.h  preferences.c  preferences.h  sensors.c  sensors.h  sht4x.c  sht4x.h  startup_onboarding.c  startup_onboarding.h  time_sync.c  time_sync.h  wifi.c
(+229 files in other folders)
