[project]
name = "projectplant-hub"
version = "0.1.0"
description = "ProjectPlant Hub (FastAPI) - minimal skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "asyncio-mqtt>=0.16.0,<1.0.0",
  "paho-mqtt>=1.6.1,<2.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "black>=24.4.0",
  "mypy>=1.10.0",
  "respx>=0.20.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
